# GRP

./: Dockerfile  MANIFEST.in  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  wsgi.py
grp/: __init__.py  asset_query_schema.py
grp/controllers/: __init__.py  asset_query.py
grp/templates/: whale_hello.html
tests/: conftest.py  grp_test.py
tests/unit/: asset_query_test.py
web/: app.py
