[metadata]
name = grp
version = 0.0.1.dev
author = Clinton Anderson
author-email = cjander18@gmail.com
summary = Rebalance a portfolio of 4 assets according to geometric returns
description-file =
    README.md
requires-dist = setuptools

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = grp